Mon Apr 14 19:20:55 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/publisher_main.cpp:

          Changed check of scheduler to just ensure scheduler was set
          since publisher would need to be run as super user on linux
          platforms to select the round robin scheduler.

Mon Apr 14 19:20:05 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/TransientLocalTest/publisher.cpp:
        * tests/DCPS/TransientLocalTest/subscriber.cpp:

          Create different topic name to diagnose out-of-order issues.

Mon Apr 14 19:17:26 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/RequestedDeadlineWatchdog.cpp:

          Additional Watchdog logging at debug level 6 and up

        * tests/DCPS/Deadline/run_test.pl:

          Run test at debug level 6.

Mon Apr 14 19:01:34 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/publisher_main.cpp:

          Fixed error in error statement.

Mon Apr 14 18:55:30 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/Priority/Subscriber.cpp:

          Removed verbose check on setup (one time) logging messages to better
          diagnose when in the sequence of events errors are happening.

Mon Apr 14 17:42:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/Priority/Subscriber.cpp:

          Added logging error for not associating the publication and
          subscription.

Mon Apr 14 16:35:35 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logic to determine if lock is held prior to editing the head
          of the waiting_list_.

Mon Apr 14 15:15:44 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logic to determine if lock is held prior to waiting on the
          condition.
